--- a/src/app/pages/place/place.page.scss
+++ b/src/app/pages/place/place.page.scss
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -58,8 +61,8 @@ ion-label {
 
 .slider {
   width: 100%;
-  position: -webkit-sticky;  // required for Safari
-  position: sticky;   
+  position: -webkit-sticky; // required for Safari
+  position: sticky;
   top: 0; // required as well.
   z-index: 50;
 }
@@ -113,50 +116,77 @@ ion-card-header {
   align-items: center;
   margin: -30px auto 10px auto;
   position: relative;
-  z-index: 100;
-  width: 92%;
+  z-index: 50;
+  width: 90%;
   background-color: rgb(240, 240, 240);
-  padding: 7px;
+  padding: 16px;
   border-radius: 60px;
-}
-
-.btn-filter {
-  border-radius: 60px;
-  background-color: #fc67ff;
-  padding: 10px;
-  width: 35%;
-  text-align: center;
-  font-weight: bold;
-  font-family: 'Poppins';
-  color: #fff;
-  font-size: .8em;
 }
 
 ion-label {
   font-weight: bold;
-  font-family: 'Poppins';
+  font-family: "Poppins";
   color: rgb(161, 161, 161);
-  font-size: .8em;
+  font-size: 0.8em;
 }
 
 .form_filter {
-  width: 92%;
-  height: 6%;
-  margin: 0 auto 5px auto;
-  border: 1px solid #3880ff;
+  display: flex;
+  flex-direction: column;
+  margin: 0 5% 5px 5%;
   z-index: 100;
   background-color: #fff;
-  border-radius: 60px;
+  border-radius: 16px;
+  -webkit-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 9px -1px rgba(161, 141, 141, 0.75);
 }
 
-form {
+.filter_name {
+  padding: 15px 0 15px 15px;
+  font-weight: bold;
+  width: 100%;
+  font-size: 0.95em;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+}
+
+.filter_list {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
+  flex-direction: column;
+  justify-content: center;
+  border-top: 2px solid #ddd;
+  width: 100%;
+  height: 35px;
+  font-size: 0.9em;
+  font-family: "Poppins", sans-serif;
+  color: rgba(116, 108, 108, 0.75);
 }
 
-form > ion-select {
-  width: 40%;
+.filter_type {
+  border-top: 2px solid #ddd;
+  width: 100%;
+}
+
+.icon_arrow {
+  float: right;
+  margin-right: 15px;
+}
+
+.type_border > .last:last-child {
+  border-bottom-left-radius: 16px !important;
+  border-bottom-right-radius: 16px !important;
+}
+
+.list_type {
+  border-bottom-left-radius: 16px !important;
+  border-bottom-right-radius: 16px !important;
+}
+
+.open_acordeon {
+  color: #fc67ff
+}
+
+ion-radio {
+  --color-checked: #fc67ff;
 }
