--- a/src/app/pages/place/place.page.html
+++ b/src/app/pages/place/place.page.html
@@ -54,6 +54,7 @@
 
     <div *ngIf="isFilterLocation || isFilterType">
       <form [formGroup]="filterForm" class="form_filter">
+  <!-- Filtro por Localidad  -->
         <div>
           <div (click)="changeLocation()" class="filter_name">
             <span *ngIf="isOpenLocation === false">Localidad</span>
@@ -89,6 +90,9 @@
             </ion-list>
           </div>
         </div>
+  <!-- filtro por Localidad -->
+
+  <!-- filtro por Tipo -->
         <div>
           <div (click)="changeType()" class="filter_name filter_type">
             <span *ngIf="isOpenType === false">Tipo</span>
@@ -125,6 +129,7 @@
             </ion-list>
           </div>
         </div>
+  <!-- Filtro por Tipo -->
       </form>
     </div>
   </div>
