--- a/src/app/pages/place/place.page.html
+++ b/src/app/pages/place/place.page.html
@@ -43,7 +43,7 @@
         </div>
       </ion-slide>
     </ion-slides>
-    <!-- filtro -->
+<!-- =========>=>=>=> Filtro =========>=>=>=> -->
     <div class="filter_place">
       <ion-label *ngIf="isOpenLocation === false " (click)="changeFilterLocation()">localidad</ion-label>
       <ion-label *ngIf="isOpenLocation" class="open_acordeon" (click)="changeFilterLocation()">localidad</ion-label>
