--- a/src/app/pages/where-sleep/where-sleep.page.scss
+++ b/src/app/pages/where-sleep/where-sleep.page.scss
@@ -94,17 +94,19 @@ span {
     color: #d6d2d1;
   }
 
-  .form_filter {
-    width: 85%;
-    height: 5%;
-    margin: 0 auto 5px auto;
-    border: 1px solid #3880ff;
-    z-index: 100;
-    background-color: #fff;
-    border-radius: 60px; 
-    justify-content: space-around;
-    position: relative;
- 
+  .slider {
+    width: 100%;
+    position: -webkit-sticky; // required for Safari
+    position: sticky;
+    top: 0; // required as well.
+    z-index: 50;
+  }
+
+  .sliderPrimero,
+.sliderHijo,
+.banner,
+.imgSlider {
+  width: 100%;
 }
 
 .filter_place {
@@ -114,21 +116,78 @@ span {
     align-items: center;
     margin: -30px auto 10px auto;
     position: relative;
-    z-index: 100;
-    width: 92%;
+    z-index: 50;
+    width: 90%;
     background-color: rgb(240, 240, 240);
-    padding: 7px;
+    padding: 16px;
     border-radius: 60px;
-}
-
-.btn-filter {
-    border-radius: 60px;
-    background-color: #fc67ff;
-    padding: 10px;
-    width: 35%;
-    text-align: center;
+  }
+  
+  ion-label {
     font-weight: bold;
-    font-family: 'Poppins';
-    color: #fff;
-    font-size: .8em;
-}
+    font-family: "Poppins";
+    color: rgb(161, 161, 161);
+    font-size: 0.8em;
+  }
+  
+  .form_filter {
+    display: flex;
+    flex-direction: column;
+    margin: 0 5% 5px 5%;
+    z-index: 100;
+    background-color: #fff;
+    border-radius: 16px;
+    -webkit-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 9px -1px rgba(161, 141, 141, 0.75);
+  }
+  
+  .filter_name {
+    padding: 15px 0 15px 15px;
+    font-weight: bold;
+    width: 100%;
+    font-size: 0.95em;
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+  }
+  
+  .filter_list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-top: 2px solid #ddd;
+    width: 100%;
+    height: 35px;
+    font-size: 0.9em;
+    font-family: "Poppins", sans-serif;
+    color: rgba(116, 108, 108, 0.75);
+  }
+  
+  .filter_type {
+    border-top: 2px solid #ddd;
+    width: 100%;
+  }
+  
+  .icon_arrow {
+    float: right;
+    margin-right: 15px;
+  }
+  
+  .type_border > .last:last-child {
+    border-bottom-left-radius: 16px !important;
+    border-bottom-right-radius: 16px !important;
+  }
+  
+  .list_type {
+    border-bottom-left-radius: 16px !important;
+    border-bottom-right-radius: 16px !important;
+  }
+  
+  .open_acordeon {
+    color: #fc67ff
+  }
+  
+  ion-radio {
+    --color-checked: #fc67ff;
+  }
+  
