--- a/src/app/pages/artist/artist.page.html
+++ b/src/app/pages/artist/artist.page.html
@@ -20,7 +20,101 @@
         <img class="imgSlider" src="https://assets.diarioconcepcion.cl/2020/10/pag-12-pinacoteca-udec-850x500.jpg"/>                
       </ion-slide>         
     </ion-slides>
+  </div>
+
+    !-- =========>=>=>=> Filtro =========>=>=>=> -->
+    <div class="filter_place">
+      <ion-label *ngIf="isOpenLocation === false " (click)="changeFilterLocation()">localidad</ion-label>
+      <ion-label *ngIf="isOpenLocation" class="open_acordeon" (click)="changeFilterLocation()">localidad</ion-label>
+      <img src="/assets/icon/exchange.png" alt="" />
+      <ion-label *ngIf="isOpenType === false" (click)="changeFilterType()">tipo</ion-label>
+      <ion-label *ngIf="isOpenType" class="open_acordeon" (click)="changeFilterType()">tipo</ion-label>
     </div>
+
+    <div *ngIf="isFilterLocation || isFilterType">
+      <form [formGroup]="filterForm" class="form_filter">
+  <!-- Filtro por Localidad  -->
+        <div>
+          <div (click)="changeLocation()" class="filter_name">
+            <span *ngIf="isOpenLocation === false">Localidad</span>
+            <span class="open_acordeon" *ngIf="isOpenLocation">Localidad</span>
+            <i
+              *ngIf="isOpenLocation === false"
+              class="fi fi-rr-angle-down icon_arrow"
+            ></i>
+            <i *ngIf="isOpenLocation" class="fi fi-rr-angle-up icon_arrow open_acordeon"></i>
+          </div>
+          <div *ngIf="isOpenLocation">
+            <ion-list>
+              <ion-radio-group
+                (ionChange)="filterArtist()"
+                formControlName="localidad"
+              >
+                <ion-item class="filter_list" lines="none">
+                  <ion-text>Todo</ion-text>
+                  <ion-radio slot="end" value=""></ion-radio>
+                </ion-item>
+                <ion-item
+                  class="filter_list"
+                  lines="none"
+                  *ngFor="let loc of artist"
+                >
+                  <ion-text>{{ loc.localidad }}</ion-text>
+                  <ion-radio
+                    slot="end"
+                    value="{{ loc.localidad }}"
+                  ></ion-radio>
+                </ion-item>
+              </ion-radio-group>
+            </ion-list>
+          </div>
+        </div>
+  <!-- filtro por Localidad -->
+
+  <!-- filtro por Tipo -->
+        <div>
+          <div (click)="changeType()" class="filter_name filter_type">
+            <span *ngIf="isOpenType === false">Tipo</span>
+            <span class="open_acordeon" *ngIf="isOpenType">Tipo</span>
+            <i
+              *ngIf="isOpenType === false"
+              class="fi fi-rr-angle-down icon_arrow"
+            ></i>
+            <i *ngIf="isOpenType" class="fi fi-rr-angle-up icon_arrow open_acordeon"></i>
+          </div>
+          <div *ngIf="isOpenType">
+            <ion-list class="list_type">
+              <ion-radio-group
+                (ionChange)="filterArtist()"
+                formControlName="tipo"
+                class="type_border"
+              >
+                <ion-item class="filter_list" lines="none">
+                  <ion-text>Todo</ion-text>
+                  <ion-radio slot="end" value=""></ion-radio>
+                </ion-item>
+                <ion-item
+                  class="filter_list last"
+                  lines="none"
+                  *ngFor="let cry of artist"
+                >
+                  <ion-text>{{ cry.tipo }}</ion-text>
+                  <ion-radio
+                    slot="end"
+                    value="{{ cry.tipo }}"
+                  ></ion-radio>
+                </ion-item>
+              </ion-radio-group>
+            </ion-list>
+          </div>
+        </div>
+  <!-- Filtro por Tipo -->
+      </form>
+    </div>
+
+
+
+
   <ion-list >
     <div class="artist" *ngFor="let art of artist">
       <div class="imgArtist">
