--- a/src/app/pages/where-sleep/where-sleep.page.html
+++ b/src/app/pages/where-sleep/where-sleep.page.html
@@ -1,33 +1,73 @@
 <ion-header>
   <ion-toolbar color="circuits">
+    <!-- <img slot="start" src="/assets/icon/dormir.png"> -->
     <ion-img slot="start" src="/assets/icon/dormir.png"></ion-img>
     <ion-title>¿Dónde Dormir?</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
+  <div id="alto" class="slider">
+    <ion-slides
+      class="sliderPrimero"
+      scrollbar="false"
+      pager="false"
+      [options]=""
+    >
+      <ion-slide >
+        <img class="imgSlider" src="" />
+      </ion-slide>
+    </ion-slides>
 
-  <div class="filter_place" (click)="changeFilter()">
-    <ion-label>localidad</ion-label>
-    <img src="/assets/icon/exchange.png" alt="">
-    <ion-label>tipo</ion-label>
-    <button type="button" class="btn-filter">Filtrar</button>
+    <!-- filtro -->
+    <div class="filter_place">
+      <ion-label *ngIf="isOpenLocation === false " (click)="changeFilterLocation()">Localidad</ion-label>
+      <ion-label *ngIf="isOpenLocation" class="open_acordeon" (click)="changeFilterLocation()">Localidad</ion-label>
+    </div>
+
+    
+    <div *ngIf="isFilterLocation" >
+      <form [formGroup]="filterForm" class="form_filter" >
+  <!-- Filtro por Localidad  -->
+        <div>
+          <div (click)="changeLocation()" class="filter_name">
+            <span *ngIf="isOpenLocation === false">Localidad</span>
+            <span class="open_acordeon" *ngIf="isOpenLocation">Localidad</span>
+            <i
+              *ngIf="isOpenLocation === false"
+              class="fi fi-rr-angle-down icon_arrow"
+            ></i>
+            <i *ngIf="isOpenLocation" class="fi fi-rr-angle-up icon_arrow open_acordeon"></i>
+          </div>
+          <div *ngIf="isOpenLocation">
+            <ion-list>
+              <ion-radio-group
+                (ionChange)="filterSleep()"
+                formControlName="localidad"
+              >
+                <ion-item class="filter_list" lines="none">
+                  <ion-text>Todo</ion-text>
+                  <ion-radio slot="end" value=""></ion-radio>
+                </ion-item>
+                <ion-item
+                  class="filter_list"
+                  lines="none"
+                  *ngFor="let loc of locationActive"
+                >
+                  <ion-text>{{ loc.localidad }}</ion-text>
+                  <ion-radio
+                    slot="end"
+                    value="{{ loc.localidad }}"
+                  ></ion-radio>
+                </ion-item>
+              </ion-radio-group>
+            </ion-list>
+          </div>
+        </div>
+      <!-- filtro por Localidad -->
+      </form>
+    </div>
   </div>
 
-  <div *ngIf="isFilter" class="form_filter">
-    <form [formGroup]="filterForm">
-      <ion-select 
-        placeholder="Localidad" 
-        formControlName="localidad"
-        (ionChange)="filterSleep()"
-        ><ion-select-option value="">Todos</ion-select-option>
-        <ion-select-option
-          *ngFor="let loc of locationActive"
-          value="{{ loc.localidad }}"
-          >{{ loc.localidad }}</ion-select-option
-        >
-      </ion-select>
-    </form>
-  </div>
   <ion-list>
     <div class="empty" *ngIf="sleep.length == 0">
       <i class="fi fi-rr-sad icon_empty"></i>
